Closed Bug 191214 Opened 22 years ago Closed 22 years ago

Object leaks in signtool.c make NSS_Shutdown fail

Categories

(NSS :: Tools, defect, P1)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

Details

Attachments

(1 file, 1 obsolete file)

After I checked in the patch to have signtool call NSS_Shutdown before exiting, the following two NSS tools tests are failing: Create objsign cert (signtool -G) Signing a set of files (signtool -Z) This breaks NSS QA. If this is not acceptable, I can back out the signtool patch until we fix these object leaks.
I've backed out my patch so that people can test their new features or bug fixes. Apply this patch to signtool to reproduce the test failures.
Priority: -- → P1
Target Milestone: --- → 3.8
Please review this patch. Thanks.
Attachment #113050 - Attachment is obsolete: true
Component: Libraries → Tools
Attachment #113065 - Flags: review+
Thanks for the code review, Julien. Fix checked into the tip. Note that none of the object leaks were in the NSS libraries.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: