Bug 191214: backed out the previous checkin until this bug (object leaks) is fixed.